lfs250/deployment0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
     containers:
      - name: nginx
        image: nginx:1.29
        ports:
          - containerPort: 80
